fix about collapsing and footer collapsing on paragraph

--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ hr {
 .about {
     background-color: #F05F40;
     width: 100vw;
-    height: 65vh;
+    height: 76vh;
     position: relative;
     z-index: -1;
     display: table;
@@ -156,7 +156,7 @@ hr {
     position: relative;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -6%);
 }
 
 .about-text hr {
@@ -350,7 +350,7 @@ hr {
     position: relative;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -24%);
 }
 
 .footer-text hr {
